# esp32-board

./: .gitignore
ble_basic/: sdkconfig  sdkconfig.old
ble_basic/main/: ble_app.c  ble_basic.c
ble_env/main/: ble_env.c
dht11/main/: dht11.c  dht11.h  main.c
display/components/bsp/: CMakeLists.txt  lv_port.c
display/components/bsp/inc/: st7789_driver.h
display/components/bsp/src/: cst816t_driver.c  st7789_driver.c
display/main/: CMakeLists.txt  cst816t_driver.c  cst816t_driver.h  main.c  st7789_driver.c
display/main/inc/: lv_port.h
display/main/src/: lv_port.c  main.c
helloworld/: CMakeLists.txt  sdkconfig  sdkconfig.old
ledc/main/: main.c
lvgl_display/: CMakeLists.txt
lvgl_display/components/bsp/: CMakeLists.txt  cst816t_driver.c  st7789_driver.h
lvgl_display/components/bsp/inc/: cst816t_driver.h  dht11.h  led_ws2812.h
lvgl_display/main/: CMakeLists.txt  lv_port.c  lv_port.h  lvgl_display.c
lvgl_display/main/inc/: lv_port.h  ui_home.h  ui_led.h
lvgl_display/main/src/: lv_port.c  lvgl_display.c  ui_home.c  ui_led.c
mqtt/main/: main.c  simple_wifi_sta.c  simple_wifi_sta.h
ntc/main/: main.c  ntc.c
nvs/main/: CMakeLists.txt  main.c  nvs.c  nvs.h
partition/main/: main.c
sdcard/: CMakeLists.txt
sdcard/main/: main.c
smartconfig/main/: CMakeLists.txt  button.c  button.h  main.c  wifi_smartconfig.c  wifi_smartconfig.h
spiffs/main/: main.c
sr04/main/: CMakeLists.txt  main.c  sr04.c  sr04.h
uart/main/: main.c  uart.c  uart.h
wifi/main/: main.c  simple_wifi_sta.c
ws2812/main/: led_ws2812.c  led_ws2812.h  main.c
